# taimen

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  media.rs  participant.rs  render.rs  room.rs  scripting.rs  signal.rs  signaling.rs  storage.rs
src/api/: mod.rs  rooms.rs
