[package]
name = "taimen"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Taimen (対面) — open-source video conferencing: self-hostable Zoom/Visio alternative with GPU TUI client"
keywords = ["video", "conferencing", "webrtc", "selfhosted", "gpu"]
categories = ["multimedia", "web-programming"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "signal"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# pleme-io dependencies
garasu = { git = "https://github.com/pleme-io/garasu.git" }
madori = { git = "https://github.com/pleme-io/madori.git" }
egaku = { git = "https://github.com/pleme-io/egaku.git" }
irodzuki = { git = "https://github.com/pleme-io/irodzuki.git" }
shikumi = { git = "https://github.com/pleme-io/shikumi.git" }

[dev-dependencies]
tempfile = "3"
