[package]
name = "taimen"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Taimen (対面) — open-source video conferencing: self-hostable Zoom/Visio alternative with GPU TUI client"
keywords = ["video", "conferencing", "webrtc", "selfhosted", "gpu"]
categories = ["multimedia", "web-programming"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
# Pleme-io shared libraries
kaname = { git = "https://github.com/pleme-io/kaname" }
soushi = { git = "https://github.com/pleme-io/soushi" }
tsunagu = { git = "https://github.com/pleme-io/tsunagu", features = ["axum"] }
shidou = { git = "https://github.com/pleme-io/shidou" }

# MCP server (rmcp + schemars needed for derive macros used alongside kaname)
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "signal", "fs"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dirs = "6.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tempfile = "3"
